--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -17,6 +17,11 @@ body {
 }
 /* start headliner design*/
 
+.container {
+    width: 1440px;
+    height: 2076px
+}
+
 .logo {
     color: var(--NAVY-BLUE);
     font-family: Raleway;
@@ -103,7 +108,6 @@ nav a {
 /* start body design */
 h {
     color: var(--NAVY-BLUE, #2E2F42);
-    
      /* Header 3 */
     font-family: Roboto;
     font-size: 20px;
@@ -217,6 +221,7 @@ span {
     border-radius: 4px;
     border: 1px solid var(--CORNFLOWER, #E7E9FC);
     background: var(--CLOUD, #F4F4FD);
+    margin-bottom: 72px;
 }
 
 .selection li {
@@ -234,4 +239,72 @@ span {
 /* start body layout */
 
 
+.rows {
+    display: flex; 
+    gap: 24px;
+    margin-left: 156px;  
+    background: var(--WHITE, #FFF);
+    margin-bottom: 28px;
+}
+
+.rows ul li {
+    list-style: none;
+    border: 1px solid var(--CORNFLOWER, #E7E9FC);
+    margin-bottom: 48px;
+}
+
+ul .innerparagraph {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 32px 16px 32px 16px;
+}
 /* end body layout */
+
+
+
+/* start of footer layout */
+
+footer {
+    /* width: 1440px; */
+    height: 312px;
+    background-color: var(--NAVY-BLUE);
+}
+
+footer .footer-content {
+    padding-top: 100px;
+    padding-left: 156px;
+}
+
+footer a {
+    text-decoration: none;
+    margin-bottom: 16px;
+}
+
+
+
+/* end of footer layout */
+
+
+
+/* Navigation Interaction */
+
+
+.portfolio a:hover,
+.contacts a:hover {
+    color: #6063a3;
+}
+
+.studio a:hover {
+    color: #5c5e7f;
+}
+
+.hero-container button:hover {
+    color: var(--NAVY-BLUE);
+    background-color: #FFF;
+}
+
+.emailandphone a:hover,
+footer p:hover {
+    color: #4D5AE5;
+}
